--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -12,15 +12,48 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-executable monto-broker
-  main-is:             Main.hs
-  -- other-modules:       
-  -- other-extensions:    
+
+library
+  exposed-modules:     Monto.MessageStore,
+                       Monto.VersionMessage,
+                       Monto.ProductMessage,
+                       Monto.Dependency
   build-depends:       base >=4.7 && <4.8,
                        aeson,
                        containers,
+                       lattices,
+                       text,
+                       fgl,
+                       vector
+  hs-source-dirs:      src/
+  default-language:    Haskell2010
+
+executable broker
+  main-is:             Main.hs
+  -- other-modules:       
+  -- other-extensions:    
+  ghc-options:         -Wall -O2 -threaded
+  build-depends:       base >=4.7 && <4.8,
+                       monto-broker,
+                       aeson,
                        text,
                        vector,
+                       unix,
                        zeromq4-haskell
-  hs-source-dirs:      src/
+  hs-source-dirs:      broker/
+  default-language:    Haskell2010
+
+test-suite specs
+  type:                exitcode-stdio-1.0
+  ghc-options:         -Wall
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  build-depends:       base == 4.*,
+                       containers,
+                       monto-broker,
+                       fgl,
+                       vector,
+                       text,
+                       hspec,
+                       QuickCheck
   default-language:    Haskell2010
