--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -18,13 +18,13 @@ library
                        Monto.VersionMessage,
                        Monto.ProductMessage,
                        Monto.Dependency
-  build-depends:       base >=4.7 && <4.8,
+  build-depends:       base,
                        aeson,
                        containers,
-                       lattices,
                        text,
                        fgl,
                        vector
+  ghc-options:         -Wall -O2
   hs-source-dirs:      src/
   default-language:    Haskell2010
 
@@ -33,11 +33,13 @@ executable broker
   -- other-modules:       
   -- other-extensions:    
   ghc-options:         -Wall -O2 -threaded
-  build-depends:       base >=4.7 && <4.8,
+  build-depends:       base,
                        monto-broker,
                        aeson,
                        text,
                        vector,
+                       optparse-applicative,
+                       libsystemd-journal >= 1.2.1,
                        unix,
                        zeromq4-haskell
   hs-source-dirs:      broker/
@@ -48,7 +50,7 @@ test-suite specs
   ghc-options:         -Wall
   hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       base == 4.*,
+  build-depends:       base,
                        containers,
                        monto-broker,
                        fgl,
