Adjust zmq code in broker executable

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -19,7 +19,8 @@ library
                        Monto.ProductMessage,
                        Monto.ProductDependency,
                        Monto.ServerDependency
-  other-modules:       Monto.Automaton
+                       Monto.Automaton,
+                       Monto.ResourceManager
   build-depends:       base,
                        aeson,
                        containers,
