--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -32,7 +32,7 @@ library
                        semigroups,
                        text,
                        vector
-  ghc-options:         -Wall -O2
+  ghc-options:         -Wall
   hs-source-dirs:      src/
   default-language:    Haskell2010
 
@@ -40,7 +40,7 @@ executable broker
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  ghc-options:         -Wall -O2 -threaded
+  ghc-options:         -Wall -threaded
   build-depends:       base,
                        aeson,
                        containers,
@@ -65,6 +65,7 @@ test-suite specs
                        fgl,
                        hspec,
                        monto-broker,
+                       mtl,
                        text,
                        vector
   default-language:    Haskell2010
