--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -8,7 +8,8 @@ author:              Sven Keidel
 maintainer:          svenkeidel@googlemail.com
 category:            Editor
 build-type:          Simple
-cabal-version:       >=1.10
+cabal-version:       >=1.18
+tested-with:         GHC == 7.8.3
 
 
 library
