--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -26,7 +26,8 @@ library
                        fgl,
                        semigroups,
                        text,
-                       vector
+                       vector,
+                       websockets
   ghc-options:         -Wall
   hs-source-dirs:      src/
   default-language:    Haskell2010
@@ -43,6 +44,7 @@ executable broker
                        text,
                        unix,
                        vector,
+                       websockets,
                        zeromq4-haskell
   hs-source-dirs:      broker/
   default-language:    Haskell2010
@@ -60,5 +62,6 @@ test-suite specs
                        monto-broker,
                        mtl,
                        text,
-                       vector
+                       vector,
+                       websockets
   default-language:    Haskell2010
