add functionality to handle service discover requests, options are ignored

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -16,7 +16,8 @@ library
                        Monto.Broker,
                        Monto.DependencyGraph,
                        Monto.DeregisterService,
-                       Monto.DiscoverRequest
+                       Monto.DiscoverRequest,
+                       Monto.DiscoverResponse,
                        Monto.ProductDependency,
                        Monto.ProductMessage,
                        Monto.RegisterServiceRequest,
