--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -24,7 +24,8 @@ library
                        Monto.RegisterServiceRequest,
                        Monto.RegisterServiceResponse,
                        Monto.ResourceManager,
-                       Monto.ServerDependency,
+                       Monto.Service,
+                       Monto.ServiceDependency,
                        Monto.Types,
                        Monto.VersionMessage
   build-depends:       base,
@@ -34,7 +35,8 @@ library
                        fgl,
                        semigroups,
                        text,
-                       vector
+                       vector,
+                       unordered-containers
   ghc-options:         -Wall
   hs-source-dirs:      src/
   default-language:    Haskell2010
