--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -12,8 +12,7 @@ tested-with:         GHC == 7.8.3
 
 
 library
-  exposed-modules:     Monto.Automaton,
-                       Monto.Broker,
+  exposed-modules:     Monto.Broker,
                        Monto.ConfigurationMessage,
                        Monto.DependencyGraph,
                        Monto.DeregisterService,
