Add option datatype to monto library

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -18,6 +18,7 @@ library
                        Monto.DeregisterService,
                        Monto.DiscoverRequest,
                        Monto.DiscoverResponse,
+                       Monto.Options,
                        Monto.ProductDependency,
                        Monto.ProductMessage,
                        Monto.RegisterServiceRequest,
