Service Dependencies are now identified by (ServiceID,Product,Language)

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -21,6 +21,7 @@ library
                        Monto.Options,
                        Monto.ProductDependency,
                        Monto.ProductMessage,
+                       Monto.ProductDescription,
                        Monto.RegisterServiceRequest,
                        Monto.RegisterServiceResponse,
                        Monto.ResourceManager,
