--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -24,6 +24,7 @@ library
                        Monto.ProductDescription,
                        Monto.RegisterServiceRequest,
                        Monto.RegisterServiceResponse,
+                       Monto.Request,
                        Monto.ResourceManager,
                        Monto.Service,
                        Monto.ServiceDependency,
