Added support for dynamic dependencies Added support for source requests from services Added support for source requests to IDEs

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -19,13 +19,16 @@ library
                        Monto.DiscoverRequest,
                        Monto.DiscoverResponse,
                        Monto.DynamicDependency,
+                       Monto.Edge,
                        Monto.Options,
                        Monto.ProductDependency,
                        Monto.ProductMessage,
                        Monto.ProductDescription,
+                       Monto.RegisterDynamicDependencies
                        Monto.RegisterServiceRequest,
                        Monto.RegisterServiceResponse,
                        Monto.Request,
+                       Monto.Require,
                        Monto.ResourceManager,
                        Monto.Service,
                        Monto.SourceMessage,
