Make subscription topic adjustable

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -29,6 +29,7 @@ library
                        Monto.ResourceManager,
                        Monto.Service,
                        Monto.SourceMessage,
+                       Monto.Subscription,
                        Monto.Types
 
   build-depends:       base,
