--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -19,6 +19,7 @@ library
                        Monto.DiscoverRequest,
                        Monto.DiscoverResponse,
                        Monto.DynamicDependency,
+                       Monto.IDEMessages,
                        Monto.Options,
                        Monto.ProductDependency,
                        Monto.ProductMessage,
@@ -28,6 +29,7 @@ library
                        Monto.Request,
                        Monto.ResourceManager,
                        Monto.Service,
+                       Monto.ServiceMessages,
                        Monto.SourceMessage,
                        Monto.Subscription,
                        Monto.Types
@@ -56,6 +58,8 @@ executable broker
                        monto-broker,
                        optparse-applicative,
                        text,
+                       transformers,
+                       mtl,
                        unix,
                        vector,
                        zeromq4-haskell
