--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -37,6 +37,7 @@ library
 
   build-depends:       base,
                        aeson,
+                       aeson-casing,
                        bytestring,
                        containers,
                        fgl,
