Integrated command message dependencies into Broker CommandMessages are now identified only with the pair of sessionId and id CommandMessages now contain requirements

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -27,6 +27,7 @@ library
                        Monto.ProductDependency,
                        Monto.ProductMessage,
                        Monto.ProductDescription,
+                       Monto.RegisterCommandMessageDependencies
                        Monto.RegisterDynamicDependencies
                        Monto.RegisterServiceRequest,
                        Monto.RegisterServiceResponse,
