Broker prints are now pretty

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -43,6 +43,7 @@ library
                        bytestring,
                        containers,
                        fgl,
+                       pretty-show,
                        semigroups,
                        text,
                        vector,
