--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -14,6 +14,7 @@ tested-with:         GHC == 7.8.3
 library
   exposed-modules:     Monto.Broker,
                        Monto.CommandMessage,
+                       Monto.CommandUpdate,
                        Monto.ConfigurationMessage,
                        Monto.DependencyGraph,
                        Monto.DependencyGraphCommandMessages,
