Source is no longer just a text, but a own type with physical- and logical name Imported new Source type everywhere Source is being used

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -34,6 +34,7 @@ library
                        Monto.Request,
                        Monto.ResourceManager,
                        Monto.Service,
+                       Monto.Source,
                        Monto.SourceMessage,
                        Monto.Types
 
