Finished CommandConsumers Added CommandMessage distribution function in Main Renamed CommandMessageDescription to CommandDescription Replaced Text tag of CommandMessage with new own Command type

--- a/monto-broker.cabal
+++ b/monto-broker.cabal
@@ -13,6 +13,7 @@ tested-with:         GHC == 7.8.3
 
 library
   exposed-modules:     Monto.Broker,
+                       Monto.CommandDescription,
                        Monto.CommandMessage,
                        Monto.ConfigurationMessage,
                        Monto.DependencyGraph,
